<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/googleCard"
        android:layout_below="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/goog"
                android:layout_marginStart="70dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_google_account"
                android:textColor="@color/txt_color"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/facebookCard"
        android:layout_below="@+id/googleCard"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fb"
                android:layout_marginStart="70dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_facebook_account"
                android:textColor="@color/txt_color"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebookCard"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:gravity="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_below="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:textColor="@color/txt_color"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:textColor="@color/txt_color"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login_txt"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/registerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"/>

    </LinearLayout>


</RelativeLayout>